# flash

./: README.md
backend/: .gitignore  db_operator.py  main.py  pyproject.toml
backend/templates/: error.html  landing.html
frontend/Flash/: .gitignore  App.js  app.json  package-lock.json  package.json
frontend/Flash/screens/: AnimatedCardFlip.js  FlashCards.js  Generate.js  Home.js  Login.js  Profile.js  SignUp.js  Themes.js  signUp.js
